Start themeroller application...

--- a/Web Apps/DMI.NET/DMI.NET/DMI.NET.vbproj
+++ b/Web Apps/DMI.NET/DMI.NET/DMI.NET.vbproj
@@ -201,6 +201,9 @@
     <Content Include="Content\themes\jMetro\images\ui-icons_d4d4d4_0.png" />
     <Content Include="Content\themes\jMetro\images\ui-icons_ffffff_0.png" />
     <Content Include="Content\themes\jMetro\jquery-ui.css" />
+    <Content Include="Content\themes\jMetro\jquery-ui.min.css">
+      <DependentUpon>jquery-ui.css</DependentUpon>
+    </Content>
     <Content Include="Content\themes\le-frog\images\animated-overlay.gif" />
     <Content Include="Content\themes\le-frog\images\ui-bg_diagonals-small_0_aaaaaa_40x40.png" />
     <Content Include="Content\themes\le-frog\images\ui-bg_diagonals-thick_15_444444_40x40.png" />
@@ -261,6 +264,38 @@
     <Content Include="Content\themes\pink-pip\jquery.ui.tabs.min.css" />
     <Content Include="Content\themes\pink-pip\jquery.ui.theme.min.css" />
     <Content Include="Content\themes\pink-pip\jquery.ui.tooltip.min.css" />
+    <Content Include="Content\themes\redmond-verdana\images\animated-overlay.gif" />
+    <Content Include="Content\themes\redmond-verdana\images\ui-bg_flat_0_aaaaaa_40x100.png" />
+    <Content Include="Content\themes\redmond-verdana\images\ui-bg_flat_55_fbec88_40x100.png" />
+    <Content Include="Content\themes\redmond-verdana\images\ui-bg_glass_75_d0e5f5_1x400.png" />
+    <Content Include="Content\themes\redmond-verdana\images\ui-bg_glass_85_dfeffc_1x400.png" />
+    <Content Include="Content\themes\redmond-verdana\images\ui-bg_glass_95_fef1ec_1x400.png" />
+    <Content Include="Content\themes\redmond-verdana\images\ui-bg_gloss-wave_55_5c9ccc_500x100.png" />
+    <Content Include="Content\themes\redmond-verdana\images\ui-bg_inset-hard_100_f5f8f9_1x100.png" />
+    <Content Include="Content\themes\redmond-verdana\images\ui-bg_inset-hard_100_fcfdfd_1x100.png" />
+    <Content Include="Content\themes\redmond-verdana\images\ui-icons_217bc0_256x240.png" />
+    <Content Include="Content\themes\redmond-verdana\images\ui-icons_2e83ff_256x240.png" />
+    <Content Include="Content\themes\redmond-verdana\images\ui-icons_469bdd_256x240.png" />
+    <Content Include="Content\themes\redmond-verdana\images\ui-icons_6da8d5_256x240.png" />
+    <Content Include="Content\themes\redmond-verdana\images\ui-icons_cd0a0a_256x240.png" />
+    <Content Include="Content\themes\redmond-verdana\images\ui-icons_d8e7f3_256x240.png" />
+    <Content Include="Content\themes\redmond-verdana\images\ui-icons_f9bd01_256x240.png" />
+    <Content Include="Content\themes\redmond-verdana\jquery-ui.min.css" />
+    <Content Include="Content\themes\redmond-verdana\jquery.ui.accordion.min.css" />
+    <Content Include="Content\themes\redmond-verdana\jquery.ui.autocomplete.min.css" />
+    <Content Include="Content\themes\redmond-verdana\jquery.ui.button.min.css" />
+    <Content Include="Content\themes\redmond-verdana\jquery.ui.core.min.css" />
+    <Content Include="Content\themes\redmond-verdana\jquery.ui.datepicker.min.css" />
+    <Content Include="Content\themes\redmond-verdana\jquery.ui.dialog.min.css" />
+    <Content Include="Content\themes\redmond-verdana\jquery.ui.menu.min.css" />
+    <Content Include="Content\themes\redmond-verdana\jquery.ui.progressbar.min.css" />
+    <Content Include="Content\themes\redmond-verdana\jquery.ui.resizable.min.css" />
+    <Content Include="Content\themes\redmond-verdana\jquery.ui.selectable.min.css" />
+    <Content Include="Content\themes\redmond-verdana\jquery.ui.slider.min.css" />
+    <Content Include="Content\themes\redmond-verdana\jquery.ui.spinner.min.css" />
+    <Content Include="Content\themes\redmond-verdana\jquery.ui.tabs.min.css" />
+    <Content Include="Content\themes\redmond-verdana\jquery.ui.theme.min.css" />
+    <Content Include="Content\themes\redmond-verdana\jquery.ui.tooltip.min.css" />
     <Content Include="Content\themes\redmond\images\animated-overlay.gif" />
     <Content Include="Content\themes\redmond\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\redmond\images\ui-bg_flat_55_fbec88_40x100.png" />
