Code changes for first publish.

--- a/Web Apps/DMI.NET/DMI.NET/Web.config
+++ b/Web Apps/DMI.NET/DMI.NET/Web.config
@@ -11,7 +11,8 @@
 		<add key="ui-theme" value="pink-pip" />
   </appSettings>
   <system.web>
-    <compilation debug="true" defaultLanguage="vb" targetFramework="4.0">
+    <customErrors mode="Off"/>
+    <compilation debug="true" defaultLanguage="vb" targetFramework="4.0" batch="false">
       <assemblies>
         <add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
         <add assembly="System.Web.Helpers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
