--- a/Web Apps/DMI.NET/DMI.NET/DMI.NET.vbproj
+++ b/Web Apps/DMI.NET/DMI.NET/DMI.NET.vbproj
@@ -547,13 +547,14 @@
     <Content Include="Content\themes\ui-lightness\jquery.ui.tooltip.min.css" />
     <Content Include="lpks\ssmain.lpk" />
     <Content Include="Content\fonts\SSI80v194934\SSI80v1.woff" />
+    <None Include="My Project\PublishProfiles\HarpDev02.pubxml" />
     <None Include="My Project\PublishProfiles\Local DMIPublished.pubxml" />
-    <None Include="Scripts\FormScripts\find.js" />
+    <Content Include="Scripts\FormScripts\find.js" />
     <Content Include="misc\mainmenu.htm" />
     <Content Include="Scripts\FormScripts\optionData.js" />
     <Content Include="Scripts\FormScripts\util_def_mailmerge.js" />
     <Content Include="Scripts\jquery\jquery-ui-1.9.2.custom.js" />
-    <None Include="Scripts\jquery\jquery.jqGrid.src.js" />
+    <Content Include="Scripts\jquery\jquery.jqGrid.src.js" />
     <None Include="_bin_deployableAssemblies\Microsoft.Web.Infrastructure.dll" />
     <None Include="_bin_deployableAssemblies\System.Web.WebPages.Razor.dll" />
     <None Include="_bin_deployableAssemblies\System.Web.WebPages.dll" />
@@ -750,19 +751,17 @@
     <Content Include="Content\themes\jqueryui\minified\jquery.ui.theme.min.css" />
     <Content Include="Content\themes\jqueryui\minified\jquery.ui.tooltip.min.css" />
     <Content Include="Content\ui.jqgrid.css" />
-    <Content Include="Include\exprmenu.htm">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    <Content Include="Include\exprmenu.htm" />
     <Content Include="Pictures\ProfilePhotos\dAvery.jpg" />
     <Content Include="Pictures\ProfilePhotos\mWORTHING.jpg" />
-    <None Include="Scripts\FormScripts\recordEdit.js" />
-    <None Include="Scripts\FormScripts\Util_Def_CustomReports.js" />
-    <None Include="Scripts\FormScripts\crosstabdef.js" />
-    <None Include="Scripts\FormScripts\util_def_exprcomponent.js" />
-    <None Include="Scripts\FormScripts\util_def_expression.js" />
+    <Content Include="Scripts\FormScripts\recordEdit.js" />
+    <Content Include="Scripts\FormScripts\Util_Def_CustomReports.js" />
+    <Content Include="Scripts\FormScripts\crosstabdef.js" />
+    <Content Include="Scripts\FormScripts\util_def_exprcomponent.js" />
+    <Content Include="Scripts\FormScripts\util_def_expression.js" />
     <Content Include="Scripts\FormScripts\calendarreportdef.js" />
-    <None Include="Scripts\jquery\jquery.maskedinput.js" />
-    <None Include="Scripts\jquery\jquery-1.8.3.js" />
+    <Content Include="Scripts\jquery\jquery.maskedinput.js" />
+    <Content Include="Scripts\jquery\jquery-1.8.3.js" />
     <Content Include="Scripts\jquery\jsTree\theme\apple\bg.jpg" />
     <Content Include="Scripts\jquery\jsTree\theme\apple\d.png" />
     <Content Include="Scripts\jquery\jsTree\theme\apple\dot_for_ie.gif" />
@@ -805,12 +804,12 @@
     <Content Include="Content\widgetCSS\wdg_oHRHoliday.css" />
     <Content Include="Include\ctl_SetFont.txt" />
     <Content Include="Include\gotoWork.txt" />
-    <None Include="Scripts\FormScripts\menu.js" />
-    <None Include="Scripts\jquery\jquery.flip.js" />
+    <Content Include="Scripts\FormScripts\menu.js" />
+    <Content Include="Scripts\jquery\jquery.flip.js" />
     <Content Include="Scripts\jquery\jsTree\jquery.jstree.js" />
-    <None Include="Scripts\jquery\jquery.marquee.js" />
-    <None Include="Scripts\jquery\jquery.gridster.js" />
-    <None Include="Scripts\jquery\jquery.mousewheel.js" />
+    <Content Include="Scripts\jquery\jquery.marquee.js" />
+    <Content Include="Scripts\jquery\jquery.gridster.js" />
+    <Content Include="Scripts\jquery\jquery.mousewheel.js" />
     <Content Include="Scripts\officebar\winkit\AbsenceBreakdown64DIS.png" />
     <Content Include="Scripts\officebar\winkit\AbsenceBreakdown64HOVER.png" />
     <Content Include="Scripts\officebar\winkit\AbsenceBreakdown64NORM.png" />
@@ -929,22 +928,22 @@
     <Content Include="Scripts\officebar\winkit\Workflow64DIS.png" />
     <Content Include="Scripts\officebar\winkit\Workflow64HOVER.png" />
     <Content Include="Scripts\officebar\winkit\Workflow64NORM.png" />
-    <None Include="Scripts\OpenHR.js" />
-    <None Include="Scripts\FormScripts\crosstab.js" />
-    <None Include="Scripts\FormScripts\customreport.js" />
-    <None Include="Scripts\FormScripts\general.js" />
+    <Content Include="Scripts\OpenHR.js" />
+    <Content Include="Scripts\FormScripts\crosstab.js" />
+    <Content Include="Scripts\FormScripts\customreport.js" />
+    <Content Include="Scripts\FormScripts\general.js" />
     <Content Include="Scripts\widgetScripts\wdg_oHRHoliday.js" />
     <Content Include="Scripts\widgetScripts\external wdg_oHRDBV.js" />
     <Content Include="Scripts\widgetScripts\wdg_oHRButton.js" />
     <Content Include="Scripts\widgetScripts\getLinks.js" />
     <Content Include="Scripts\widgetScripts\wdg_oHRDBV.js" />
     <Content Include="packages.config" />
-    <None Include="Scripts\ctl_SetFont.js" />
-    <None Include="Scripts\ctl_SetStyles.js" />
-    <None Include="Scripts\jquery\jquery.cookie.js" />
-    <None Include="Scripts\jquery\jquery.rightClick.js" />
-    <None Include="Scripts\jquery\jquery.ui.touch-punch.min.js" />
-    <None Include="Scripts\jquery\jquery.menu.js" />
+    <Content Include="Scripts\ctl_SetFont.js" />
+    <Content Include="Scripts\ctl_SetStyles.js" />
+    <Content Include="Scripts\jquery\jquery.cookie.js" />
+    <Content Include="Scripts\jquery\jquery.rightClick.js" />
+    <Content Include="Scripts\jquery\jquery.ui.touch-punch.min.js" />
+    <Content Include="Scripts\jquery\jquery.menu.js" />
     <Content Include="Views\Account\About.ascx" />
     <Content Include="Views\Account\Loginerror.aspx" />
     <Content Include="Views\Account\ForcedPasswordChange.aspx" />
@@ -1052,8 +1051,8 @@
   <ItemGroup>
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
-    <None Include="Scripts\jquery\jquery.validate-vsdoc.js" />
-    <None Include="Scripts\jquery\jquery.validate.js" />
+    <Content Include="Scripts\jquery\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery\jquery.validate.js" />
     <None Include="Scripts\modernizr-1.7.js" />
     <None Include="Scripts\modernizr-1.7.min.js" />
     <Content Include="Views\Shared\Util_Def_CustomReports\dialog.ascx" />
@@ -1074,11 +1073,11 @@
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
-    <None Include="Scripts\jquery\jquery.unobtrusive-ajax.js" />
-    <None Include="Scripts\jquery\jquery.validate.unobtrusive.js" />
-    <None Include="Scripts\Microsoft\MicrosoftAjax.js" />
-    <None Include="Scripts\Microsoft\MicrosoftMvcAjax.js" />
-    <None Include="Scripts\Microsoft\MicrosoftMvcValidation.js" />
+    <Content Include="Scripts\jquery\jquery.unobtrusive-ajax.js" />
+    <Content Include="Scripts\jquery\jquery.validate.unobtrusive.js" />
+    <Content Include="Scripts\Microsoft\MicrosoftAjax.js" />
+    <Content Include="Scripts\Microsoft\MicrosoftMvcAjax.js" />
+    <Content Include="Scripts\Microsoft\MicrosoftMvcValidation.js" />
     <Content Include="Views\Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -1092,6 +1091,24 @@
       <Guid>{00000205-0000-0010-8000-00AA006D2EA4}</Guid>
       <VersionMajor>2</VersionMajor>
       <VersionMinor>5</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>primary</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
+    <COMReference Include="MSAdodcLib">
+      <Guid>{67397AA1-7FB1-11D0-B148-00A0C922E820}</Guid>
+      <VersionMajor>6</VersionMajor>
+      <VersionMinor>0</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>tlbimp</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
+    <COMReference Include="stdole">
+      <Guid>{00020430-0000-0000-C000-000000000046}</Guid>
+      <VersionMajor>2</VersionMajor>
+      <VersionMinor>0</VersionMinor>
       <Lcid>0</Lcid>
       <WrapperTool>primary</WrapperTool>
       <Isolated>False</Isolated>
@@ -1139,7 +1156,7 @@
         <WebProjectProperties>
           <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>50115</DevelopmentServerPort>
+          <DevelopmentServerPort>61989</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
           <IISUrl>http://localhost:50115/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
