--- a/Web Apps/DMI.NET/DMI.NET/Web.config
+++ b/Web Apps/DMI.NET/DMI.NET/Web.config
@@ -8,7 +8,7 @@
     <add key="webpages:Version" value="1.0.0.0" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-		<add key="ui-theme" value="pink-pip" />
+		<add key="ui-theme" value="redmond-verdana" />   
   </appSettings>
   <system.web>
     <customErrors mode="Off"/>
