Created code stubs for the OLE stuff. This will require revisiting as and when ole is implemented in the record edit. The clsOLE contains the original code but was not upgraded at this stage because the of the differences in file handling between vb6 and vb.net also the encryption stuff would have needed addressing.

--- a/Components/COAInt_Server/COAInt_Server.vbproj
+++ b/Components/COAInt_Server/COAInt_Server.vbproj
@@ -215,6 +215,7 @@
     <Compile Include="modUtilityAccess.vb">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="OLE2.vb" />
     <Compile Include="TablePrivilege.vb">
       <SubType>Code</SubType>
     </Compile>
