Removed the need for Microsoft.VisualBasic.Compability but creating a code stub for VB6. The only two functions that are actually used are CopyArray and Format. The other functions that were causing compilation errors I've removed (they weren't called, and they didn't work!)
I've also had to upgrade the version of the ADODB in both the server DLL and the web site. This was because, well not putting too finer point, just didn't run under 64 bit. I've read around Google a bit and everything seems to point that it should be perfectly compatable as its still a com component. Moving to the ADO.NET library would break all of our database connecttion code.

Had to modify finds.ascx too because of the subtle difference with the new version of ADO and how it deals with dbnulls (I think anyway, it could just have been an error from task-32 where regional date settings has been put in.
The copyArray has been swappped out to a clone function which leaves the arrays exactly the same, any changes here need to be done with care as .net and vb6 start arrays at 1 and 0 accordingly (or is it the other way round).

Also of note is that we were using mm/dd/yyyy as a date format string. This really should be  MM/dd/yyyy as little mm gives us the month.

--- a/Components/COAInt_Server/COAInt_Server.vbproj
+++ b/Components/COAInt_Server/COAInt_Server.vbproj
@@ -80,18 +80,6 @@
     <OptionStrict>Off</OptionStrict>
   </PropertyGroup>
   <ItemGroup>
-    <COMReference Include="ADODB">
-      <Guid>{00000205-0000-0010-8000-00AA006D2EA4}</Guid>
-      <VersionMajor>2</VersionMajor>
-      <VersionMinor>5</VersionMinor>
-      <Lcid>0</Lcid>
-      <WrapperTool>primary</WrapperTool>
-      <Isolated>False</Isolated>
-      <EmbedInteropTypes>True</EmbedInteropTypes>
-    </COMReference>
-    <Reference Include="Microsoft.VisualBasic.Compatibility">
-      <Name>Microsoft.VisualBasic.Compatibility</Name>
-    </Reference>
     <Reference Include="Microsoft.VisualBasic.PowerPacks.VS">
       <Name>Microsoft.VisualBasic.PowerPacks.VS</Name>
     </Reference>
@@ -227,6 +215,7 @@
     </Compile>
     <Compile Include="Utilities.vb" />
     <Compile Include="AssemblyInfo.vb" />
+    <Compile Include="VB.vb" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="My Project\" />
@@ -242,6 +231,17 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <COMReference Include="ADODB">
+      <Guid>{B691E011-1797-432E-907A-4D8C69339129}</Guid>
+      <VersionMajor>6</VersionMajor>
+      <VersionMinor>1</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>tlbimp</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.VisualBasic.targets" />
   <PropertyGroup>
