--- a/Web Apps/DMI.NET/DMI.NET/Web.config
+++ b/Web Apps/DMI.NET/DMI.NET/Web.config
@@ -8,7 +8,9 @@
     <add key="webpages:Version" value="1.0.0.0" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-		<add key="ui-theme" value="redmond" />   
+	<add key="ui-theme" value="redmond" />
+    <add key="LoginPage:Database" value="npg_openhr8" />
+    <add key="LoginPage:Server" value="harpdev02" />
   </appSettings>
   <system.web>
     <customErrors mode="Off"/>
